--- a/styles/global.css
+++ b/styles/global.css
@@ -18,6 +18,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/CascadeStyleSheet.css
     --highlight: #EDF67D;
     --bg-color-form:#3E5577;
     --bg-color-odd:#6185ba;
+    --text-color-red:#E27E7C
 }
 
 
